cmd/cli/kubectl-kyverno/testyaml/resource1.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-env-test
  labels:
    my-environment-name: test
spec: 
  containers:
  - name: nginx
    image: nginx:latest
---
apiVersion: v1
kind: Pod
metadata:
  name: test-env-dev
  labels:
    my-environment-name: dev
spec: 
  containers:
  - name: nginx
    image: nginx:1.12
